--- a/assets/styles/bootstrap/less/variables.less
+++ b/assets/styles/bootstrap/less/variables.less
@@ -213,8 +213,8 @@
 @navbarBrandColor:  lighten(@navbarLinkColor, 40%);
 
 // Inverted navbar
-@navbarInverseBackground: #00705E;
-@navbarInverseBackgroundHighlight:  #00A287;
+@navbarInverseBackground: darken(@navbarBackgroundHighlight, 65%);
+@navbarInverseBackgroundHighlight: #00A287;
 @navbarInverseBorder: #252525;
 
 @navbarInverseText: @grayLight;
