Added Google site verification tag and link to profile (needed for Google authorship setup)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,10 @@
   <footer class="text-right">
+    <small>
+      <a href="https://plus.google.com/112228900913862544865?rel=author">
+        <img src="http://www.google.com/images/icons/ui/gprofile_button-16.png" width="16" height="16">
+        Google+
+      </a>
+    </small>
   </footer>
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
