--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>{{ site.titleprefix }}: {{ page.title }}</title>
-  <meta name="description" content="Personal site for Adam Pritchard: {{ site.description }}">
+  <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
+  <meta name="google-site-verification" content="WxZdzPANRFpehqogDMcTc9HLGXXDJy5If07MuUZvHho" />
 
   <link rel="icon" type="image/png" href="/favicon.png" />
   <link rel="stylesheet" href="/assets/styles/bootstrap/css/bootstrap.css">
