Added my name as post author

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: none
       <div class="span12 post-head">
         <h1><a href="{{ page.url }}">{{ page.title }}</a></h1>
         <p>
-          {{ page.date | date: "%Y-%m-%d" }}
+          {{ page.date | date: "%Y-%m-%d" }} by {{ site.myfullname }}
         </p>
       </div>
     </div>
