--- a/assets/styles/bootstrap/less/variables.less
+++ b/assets/styles/bootstrap/less/variables.less
@@ -32,7 +32,7 @@
 
 // Scaffolding
 // -------------------------
-@bodyBackground:  #006957;
+@bodyBackground:  #002B23;
 @textColor: rgb(192, 213, 209);
 
 
