--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
   <footer class="text-right">
     <small>
-      <a href="https://plus.google.com/112228900913862544865?rel=author">
+      <a href="https://plus.google.com/+AdamPritchard?rel=author">
         <img src="http://www.google.com/images/icons/ui/gprofile_button-16.png" width="16" height="16">
         Google+
       </a>
