--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -85,9 +85,9 @@ h6 {
   bottom: 0;
   left: 0;
   right: 0;
-  background-image: -webkit-linear-gradient(bottom, #333d3b, rgba(51, 61, 59, 0));
-  background-image: -moz-linear-gradient(bottom, #333d3b, rgba(51, 61, 59, 0));
-  background-image: linear-gradient(to top, #333d3b, rgba(51, 61, 59, 0));
+  background-image: -webkit-linear-gradient(bottom, #002b23, rgba(51, 61, 59, 0));
+  background-image: -moz-linear-gradient(bottom, #002b23, rgba(51, 61, 59, 0));
+  background-image: linear-gradient(to top, #002b23, rgba(51, 61, 59, 0));
 }
 .post-excerpt .overflow-fade h1 {
   position: absolute;
