--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,7 @@
   <footer class="text-right">
     <small>
       <a href="https://plus.google.com/+AdamPritchard?rel=author">
-        <img src="http://www.google.com/images/icons/ui/gprofile_button-16.png" width="16" height="16">
-        Google+
+        <img src="https://www.google.com/images/icons/ui/gprofile_button-32.png" width="16" height="16">
       </a>
     </small>
   </footer>
@@ -17,10 +16,13 @@
   <script src="/assets/js/main.js"></script>
 
   <script>
-    var _gaq=[['_setAccount','UA-34001925-1'],['_trackPageview']];
-    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-     g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-     s.parentNode.insertBefore(g,s)}(document,'script'));
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-34001925-1', 'auto');
+    ga('send', 'pageview');
   </script>
 </body>
 </html>
