--- a/assets/styles/bootstrap/css/responsive.css
+++ b/assets/styles/bootstrap/css/responsive.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,500,500italic);
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,500,500italic);
 /*!
  * Bootstrap Responsive v2.3.1
  *
