--- a/assets/styles/bootstrap/less/variables.less
+++ b/assets/styles/bootstrap/less/variables.less
@@ -44,7 +44,7 @@
 
 // Typography
 // -------------------------
-@import url(http://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,500,500italic);
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,500,500italic);
 
 @font-face {
     font-family: 'TitleFont';
