--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,500,500italic);
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,500,500italic);
 @font-face {
   font-family: 'TitleFont';
   src: url('/assets/font/BPdotsSquareBold-webfont.eot');
