Improve projects listing

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,7 @@
   <link rel="icon" type="image/png" href="/favicon.png" />
   <link rel="stylesheet" href="/assets/styles/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="/assets/styles/font-awesome/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/8.5.0/build.css" integrity="sha256-iPUhChwurLRCrDCM1+2a2LDe9pfW6Je29o/oA5VPr28=" crossorigin="anonymous" />
 
   <style>
     body {
