--- a/assets/styles/bootstrap/less/code.less
+++ b/assets/styles/bootstrap/less/code.less
@@ -51,6 +51,9 @@ pre {
     white-space: pre-wrap;
     background-color: transparent;
     border: 0;
+
+    // adam-p
+    box-shadow: none;
   }
 }
 
