vendor underscore.js

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,5 @@
-  <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
-
+  <script src="/assets/js/vendor/underscore-umd-min-1.13.1.js"></script>
   <script src="/assets/js/vendor/bootstrap.min.js"></script>
-
   <script src="/assets/js/plugins.js"></script>
   <script src="/assets/js/utils.js"></script>
   <script src="/assets/js/main.js"></script>
