Add copyright footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,6 @@
+  <footer class="pull-right">
+    <small>© {{ 'now' | date: "%Y" }} Adam Pritchard</small>
+  </footer>
   <script src="/assets/js/vendor/underscore-umd-min-1.13.1.js"></script>
   <script src="/assets/js/vendor/bootstrap.min.js"></script>
   <script src="/assets/js/plugins.js"></script>
