--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>{{ site.titleprefix }}: {{ page.title }}</title>
+  <title>{{ page.title }}</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
   <meta name="google-site-verification" content="WxZdzPANRFpehqogDMcTc9HLGXXDJy5If07MuUZvHho" />
