remove subresource integrity use
It was somehow breaking when used with Cloudflare -- it looks like CF is compressing the resource files but not updating the integrity hash. Also, since all the files are stored in the same place, the SRI doesn't really serve any purpose -- if the resources can be hacked, so can the HTML file.

--- a/layouts/projects/section.html
+++ b/layouts/projects/section.html
@@ -62,8 +62,8 @@
 Rather than duplicate the info and links, please take a look at
 <a href="/cv/">my résumé</a> for stuff about professional work.
 
-{{ $projectsJS := resources.Get "js/projects.js" | resources.Fingerprint "sha512" }}
-<script src="{{ $projectsJS.RelPermalink }}" integrity="{{ $projectsJS.Data.Integrity }}"></script>
+{{ $projectsJS := resources.Get "js/projects.js" }}
+<script src="{{ $projectsJS.RelPermalink }}"></script>
 
 {{ end }}
 
