--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -14,8 +14,8 @@
     <meta name="google-site-verification" content="WxZdzPANRFpehqogDMcTc9HLGXXDJy5If07MuUZvHho" />
     <link rel="icon" type="image/png" href="/favicon.png" />
 
-    {{ $stylesCSS := resources.Get "scss/styles.scss" | resources.ToCSS | resources.Fingerprint "sha512" }}
-    <link rel="stylesheet" href="{{ $stylesCSS.RelPermalink }}" integrity="{{ $stylesCSS.Data.Integrity }}">
+    {{ $stylesCSS := resources.Get "scss/styles.scss" | resources.ToCSS }}
+    <link rel="stylesheet" href="{{ $stylesCSS.RelPermalink }}">
 
     <!-- Blocks may include default content. -->
     <title>{{ block "title" . }}{{ .Scratch.Get "pageTitle" }}{{ end }}</title>
@@ -37,7 +37,7 @@
 
     </div>
 
-    {{ $bootstrapJS := resources.Get "node_modules/bootstrap/dist/js/bootstrap.js" | resources.Fingerprint "sha512" }}
-    <script src="{{ $bootstrapJS.RelPermalink }}"integrity="{{ $bootstrapJS.Data.Integrity }}"></script>
+    {{ $bootstrapJS := resources.Get "node_modules/bootstrap/dist/js/bootstrap.js" }}
+    <script src="{{ $bootstrapJS.RelPermalink }}"></script>
   </body>
 </html>
