--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    {{ .Scratch.Set "pageTitle" .Title }}
-    {{ if ne .Kind "home" }}{{ .Scratch.Set "pageTitle" (print .Title " | " .Site.Title) }}{{ end }}
-    {{ range .AlternativeOutputFormats -}}
-    {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .RelPermalink ($.Scratch.Get "pageTitle") | safeHTML }}
-    {{ end -}}
+    {{- block "relURLBase" . -}} {{/* This will be used by 404.html */}} {{- end -}}
+
+    {{- .Scratch.Set "pageTitle" .Title -}}
+    {{- if ne .Kind "home" -}}{{- .Scratch.Set "pageTitle" (print .Title " | " .Site.Title) -}}{{- end -}}
+    {{- range .AlternativeOutputFormats -}}
+    {{- printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .RelPermalink ($.Scratch.Get "pageTitle") | safeHTML -}}
+    {{- end -}}
 
     <meta name="google-site-verification" content="WxZdzPANRFpehqogDMcTc9HLGXXDJy5If07MuUZvHho" />
     <link rel="icon" type="image/png" href="/favicon.png" />
 
-    {{ $stylesCSS := resources.Get "scss/styles.scss" | resources.ToCSS }}
+    {{- $stylesCSS := resources.Get "scss/styles.scss" | resources.ToCSS -}}
     <link rel="stylesheet" href="{{ $stylesCSS.RelPermalink }}">
 
     <!-- Blocks may include default content. -->
