Correct post date

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <section>
   <h1 class="title"><a href="{{ .RelPermalink }}">{{ .Title }}</a></h1>
-  <h5 class="text-end"> {{ .Date.Format "Monday January 2, 2006" }} </h5>
+  <h5 class="text-end"> {{ .Date.Format "January 2, 2006" }} </h5>
   <div>
         <article>
            {{ .Content }}
