--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -11,8 +11,17 @@
 <hr>
 <aside>
   <p>
-    <h5> {{ .WordCount }} Words </h5>
+    <h5> {{ .WordCount | lang.FormatNumber 0 }} Words </h5>
   </p>
+
+  <p>
+    Last Update:
+    <time datetime="{{ .Page.Lastmod.Format "Mon Jan 10 17:13:38 2020 -0700" }}" class="text-muted">
+      {{ $.Page.Lastmod.Format "January 02, 2006" }}
+    </time>
+    <br>
+    <a href="https://github.com/adam-p/adam-p.github.com/commits/master/content/{{ $.Page.GetIdentity.Path }}">See revision history</a>
+  </p>  
 
   {{ if .Params.tags }}
   <p>
@@ -27,14 +36,6 @@
   </p>
   {{ end }}
 
-  <p>
-    Last Update:
-    <time datetime="{{ .Page.Lastmod.Format "Mon Jan 10 17:13:38 2020 -0700" }}" class="text-muted">
-      {{ $.Page.Lastmod.Format "January 02, 2006" }}
-    </time>
-    <br>
-    <a href="https://github.com/adam-p/adam-p.github.com/commits/master/content/{{ $.Page.GetIdentity.Path }}">See revision history</a>
-  </p>  
   <p>
     {{ with .NextInSection }}
         Next: <a class="next" href="{{.RelPermalink}}"> {{.Title}}</a>
