--- a/layouts/projects/section.html
+++ b/layouts/projects/section.html
@@ -68,5 +68,5 @@ Rather than duplicate the info and links, please take a look at
 {{ end }}
 
 {{ define "footer" }}
-{{ partial "footer" . }}
+{{ partialCached "footer" . }}
 {{ end }}
