put square brackets around footnote numbers

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -202,3 +202,11 @@ hr {
     font-weight: bold;
   }
 }
+
+// Add square brackets around footnote references
+a.footnote-ref::before {
+  content: '[';
+}
+a.footnote-ref::after {
+  content: ']';
+}
