deploy: 537bf3023609eea2aebe0c1e266965672c0aa930

--- a/scss/styles.css
+++ b/scss/styles.css
@@ -12947,3 +12947,9 @@ hr {
 
 .repo .repo__popular {
   font-weight: bold; }
+
+a.footnote-ref::before {
+  content: '['; }
+
+a.footnote-ref::after {
+  content: ']'; }
