add string length post (draft)

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -7,7 +7,7 @@
     {{ if and (gt .WordCount 400 ) (.Params.toc) }}
     <aside>
         <header>
-        <h2>{{.Title}}</h2>
+          <h4>Contents</h4>
         </header>
         {{.TableOfContents}}
     </aside>
