--- a/layouts/unpub/single.html
+++ b/layouts/unpub/single.html
@@ -5,12 +5,12 @@
   <div>
 
     {{ if and (gt .WordCount 400 ) (.Params.toc) }}
-    <aside>
-        <header>
-          <h4>Contents</h4>
-        </header>
+    <details class="toc" open>
+        <summary>
+          Table of Contents
+        </summary>
         {{.TableOfContents}}
-    </aside>
+    </details>
     {{ end }}
 
     <article>
